--- a/templates/al.html
+++ b/templates/al.html
@@ -70,6 +70,6 @@
     <!-- Upper-Case -->
     <h1 style="color: black;background-color: yellow">{{purpose}}</h1>
     <br>
-    <h2 style="color:white">{{result}}</h2>
+    <h2 style="color:white"><pre>{{result}}</pre></h2>
 </body>
 </html>
